# rajjaa.github.io

./: .gitignore  README.md  _config.yml  pyproject.toml
_data/: scholar_publications.json  scholar_publications_scholarly.json  settings.yml
_posts/: 2016-04-04-about-the-author.md  2017-01-01-welcome-to-millennial.md  2023-09-27-about-the-author.md  2025-03-30-about-the-author.md
assets/css/: main.scss
pages/: projects.md  research.md
utils/: scrape_scholar_profile.py
